2011-01-22  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/sqr_basecase.c (MPN_SQR_DIAG_ADDLSH1): New macro, using
	new function mpn_sqr_diag_addlsh1 or defining its equivalent.

	* gmp-impl.h (mpn_addmul_2s): Declare.
	(mpn_sqr_diag_addlsh1): Declare.
	* mpn/asm-defs.m4 (define_mpn): Add addmul_2s and sqr_diag_addlsh1.

	* configure.in: Add HAVE_NATIVEs for mpn_sqr_diag_addlsh1 and
	mpn_addmul_2s.
	(gmp_mpn_functions_optional): Add sqr_diag_addlsh1.

2011-01-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/devel/try.c: Initial support for mpn_bdiv_q_1.
	* mpn/x86/pentium/bdiv_q_1.asm: New file.
	* mpn/x86/p6/bdiv_q_1.asm: New file.

2011-01-20  Torbjorn Granlund  <tege@gmplib.org>

	* tune/speed.c (run_gnuplot): Update to current gnuplot syntax.

	* mpn/powerpc64/mode64/aorsmul_1.asm: Trim away 0.5 c/l for submul_1
	for POWER5.

2011-01-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/core2/rsh1aors_n.asm: New file.

2011-01-18 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/bdiv_q_1.asm: New file (same core alg. as dive_1).

2011-01-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/divexact.c: Avoid COPY if not needed.

2011-01-14  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (struct cpuvec_t): Add field bmod_1_to_mod_1_threshold.
	* configure.in (fat_thresholds): Add BMOD_1_TO_MOD_1_THRESHOLD.

2011-01-13 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/mul.c: Remove redundant size computation.

2011-01-08  Torbjorn Granlund  <tege@gmplib.org>

	* tests/devel/try.c (types enum): Add TYPE_MUL_5 and TYPE_MUL_6.
	(param_init): Support new types.
	(choice_array): Support testing of mpn_mul_5 and mpn_mul_6.
	(call): Support new routines.

	* tests/refmpn.c (refmpn_mul_5, refmpn_mul_6): New functions.
	* tests/tests.h (refmpn_mul_5, refmpn_mul_6): Declare.
	Remove parameter names from some other functions.

	* gmp-impl.h (mpn_mul_5, mpn_mul_6): Declare.
	* mpn/asm-defs.m4: Likewise, also declare mpn_addmul_5, mpn_addmul_6,